--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section>
       <div class="row">
         <nav>
-          <img class="nav__logo" src="./assets/watcha logo.png" alt="" />
+          <img class="nav__logo" src="./assets/watcha lg. (1).png" alt="" />
           <div class="nav__links">
             <a class="nav__link link__hover-effect hover__turquoise" href="#"
               ><span class="turquoise">Home</span></a
@@ -32,27 +32,28 @@
       </div>
     </section>
     <header>
-      <div class="row">
-        <div class="header__info">
-          <h1 class="header__description">
-            United States most awarded movie streamed platform
-          </h1>
-          <h2 class="input__title">
-            FIND YOUR FAVORITE MOVIE WITH <span class="turquoise">WATCHA</span>
-          </h2>
-          <div class="input__wrapper">
-            <input type="text" placeholder="Search Movie" />
-            <button class="btn__search">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
+        <div class="row">
+          <div class="header__info">
+            <h1 class="header__description">
+              United States most awarded movie streamed platform
+            </h1>
+            <h2 class="input__title">
+              FIND YOUR FAVORITE MOVIE WITH
+              <span class="turquoise">WATCHA</span>
+            </h2>
+            <div class="input__wrapper">
+              <input type="text" placeholder="Search Movie" />
+              <button class="btn__search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+            </div>
           </div>
+          <img
+            class="header__img"
+            src="./assets/undraw_home_cinema_l7yl (1).svg"
+            alt=""
+          />
         </div>
-        <img
-          class="header__img"
-          src="./assets/undraw_home_cinema_l7yl (1).svg"
-          alt=""
-        />
-      </div>
     </header>
   </body>
 </html>
