--- a/movie.html
+++ b/movie.html
@@ -18,7 +18,7 @@
     <section id="landing__movies">
       <div class="row">
         <nav>
-          <img class="nav__logo" src="./assets/watcha logo.png" alt="" />
+          <img class="nav__logo" src="./assets/watcha lg. (1).png" alt="" />
           <div class="nav__links">
             <a class="nav__link--browse link__hover-effect" href="#">Home</a>
             <a
@@ -44,7 +44,7 @@
         </div>
           <img
             class="overlay__img"
-            src="https://img.freepik.com/free-vector/movie-film-strip-blue-background_1017-33458.jpg"
+            src="https://e0.pxfuel.com/wallpapers/361/985/desktop-wallpaper-dark-blue-background-dark-presentation-thumbnail.jpg"
             alt=""
           />
           <div class="divider"></div>
@@ -56,7 +56,7 @@
         <div class="row">
           <div class="movies">
             <div class="movie">
-              <figure class="movie__img--wrapper">
+              <figure>
                 <img
                   class="movie__img"
                   src="https://m.media-amazon.com/images/M/MV5BNGE0YTVjNzUtNzJjOS00NGNlLTgxMzctZTY4YTE1Y2Y1ZTU4XkEyXkFqcGc@._V1_SX300.jpg"
