--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="nav__link link__hover-effect hover__turquoise" href="#"
               ><span class="turquoise">Home</span></a
             >
-            <a class="nav__link link__hover-effect hover__black" href="#"
+            <a class="nav__link link__hover-effect hover__black" href="./movie.html"
               >Find movie</a
             >
             <a class="nav__link nav__btn" href="#">Contact</a>
