--- a/movie.html
+++ b/movie.html
@@ -20,9 +20,9 @@
         <nav>
           <img class="nav__logo" src="./assets/watcha lg. (1).png" alt="" />
           <div class="nav__links">
-            <a class="nav__link--browse link__hover-effect" href="#">Home</a>
+            <a class="nav__link--browse link__hover-effect link__hover-effect--white" href="./index.html">Home</a>
             <a
-              class="nav__link--browse link__hover-effect hover__black"
+              class="nav__link--browse link__hover-effect link__hover-effect--white"
               href="#"
               >Find movie</a
             >
@@ -35,10 +35,8 @@
           <div class="header__info">
             <h1 class="browse__title">Browse your movie</h1>
             <div class="input__wrapper--browse">
-              <input class="input__browse" type="text" placeholder="Search Movie" />
-              <div class="btn__search--browse">
-                <i class="fa-solid fa-magnifying-glass icon"></i>
-              </div>
+              <input class="input__browse" type="text" placeholder="Search Movie" onchange="onSearchChange(event)"/>
+              <button class="btn__search--browse"><i class="fa-solid fa-magnifying-glass icon"></i></button>  
             </div>
           </div>
         </div>
@@ -65,7 +63,7 @@
               </figure>
               <div class="movie__info">
                 <p><b>Title:</b> The Avengers</p>
-                <p><b>Release date:</b> 2018</p>
+                <p><b>Year:</b> 2018</p>
               </div>
             </div>
           </div>
